k8s/shared/redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: shared
  labels:
    app: redis
spec:
  ports:
  - name: tcp-redis
    port: 6379
    targetPort: 6379
    protocol: TCP
  selector:
    app: redis
